Additional controllers and basic page templates

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,14 +24,12 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
-							<span class="sr-only">(current)</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a>
+					<li class="nav-item active">
+						<a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a>
-					</li>
+					<li class="nav-item"><a class="nav-link" href="/snakes">Snakes</a></li>
+					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -123,8 +121,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your
-				Website 2020</p>
+			<p class="m-0 text-center text-white">Copyright &copy; Snake Store on Spring 2020</p>
 		</div>
 		<!-- /.container -->
 	</footer>
