--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
 		<div class="row align-items-center my-5">
 			<div class="col-lg-7">
 				<img class="img-fluid rounded mb-4 mb-lg-0"
-					src="http://placehold.it/900x400" alt="">
+					src="/logo.png" alt="Site Logo">
 			</div>
 			<!-- /.col-lg-8 -->
 			<div class="col-lg-5">
