--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,9 +27,15 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item"><a class="nav-link" href="/snakes">Snakes</a></li>
-					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+					<li class="nav-item">
+						<a class="nav-link" href="/snakes">Snakes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/about">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/contact">Contact</a>
+					</li>
 				</ul>
 			</div>
 		</div>
